测试新生代对象进入老年代次数配置